@@ -8,9 +8,15 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Fixed bug in Krang::Contrib where importing a contributor with no
+first name or no last name would duplicate the contributor if it
+already existed instead of updating. [Sam]
+
+=item *
+
 Added the C<--skip> option to C<krang_import> which exposes the
 existing Krang::DataSet::import_all() C<skip_classes> option from the
-command-line.
+command-line. [Sam]
 
 =item *
 
